# ship-detection-processing

./: .gitignore  README.md  README_PARALLEL.md  fix_imports.py  main.py  pyproject.toml  requirements.txt  run_improved_pipeline.py  test_components.py
.cursor/rules/: project-details.mdc
docs/: improved_micromotion_pipeline.md
src/improved_pipeline/: README.md  __init__.py  component_classifier.py  main.py  manual_selection.py  phase_extractor.py  physics_constraints.py  preprocessor.py  ship_detector.py  time_frequency_analyzer.py  utils.py  visualizer.py
src/ship_detection/: processor.py
src/ship_detection/io/: readers.py
src/ship_detection/processing/: doppler_subaperture.py  ship_detector.py
src/ship_detection/tests/: test_basic.py
src/ship_detection/utils/: helpers.py
src/ship_detection/visualization/: heatmaps.py
standards-docs/: remotesensing-11-01637-v2.md
