[project]
name = "ship-detection-processing"
version = "0.1.0"
description = "Ship detection and micro-motion analysis from SAR imagery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sarpy>=1.3.50",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.22.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
